ecmascript/parser/tests/test262-error-references/fail/4a19d40213c79876.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/4a19d40213c79876.js:1:3
  |
1 | i #= 0
  |   ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/4a19d40213c79876.js:1:1
  |
1 | i #= 0
  | ^

